%%{init: {'theme':'base','themeVariables':{'fontFamily':'Arial','primaryColor':'#F7F3F2','primaryTextColor':'#171717','primaryBorderColor':'#B4232F','lineColor':'#5B6068','secondaryColor':'#F3F4F6','tertiaryColor':'#FFFFFF','clusterBkg':'#FFFFFF','clusterBorder':'#D1D5DB','actorBkg':'#FFFFFF','actorBorder':'#B4232F','actorTextColor':'#171717','signalColor':'#404040','signalTextColor':'#171717','noteBkgColor':'#FFF7ED','noteBorderColor':'#C2410C','noteTextColor':'#171717'}}}%%
erDiagram
    ai_systems ||--o{ ai_system_versions : versions
    ai_system_versions ||--o{ ai_data_use_revisions : declares
    ai_system_versions ||--o{ ai_release_manifests : packages
    ai_systems ||--o{ ai_deployments : deploys
    ai_release_manifests ||--o{ ai_approvals : reviewed_by
    ai_deployments ||--o{ ai_evidence : collects
    ai_evidence o|--o{ ai_control_evaluations : supports
    ai_control_evaluations ||--o| ai_governance_incidents : opens
    ai_systems {
      uuid id PK
      uuid org_id FK
      string lifecycle_status
      string autonomy_level
    }
    ai_system_versions {
      uuid id PK
      uuid system_id FK
      int version_number
      string definition_hash
    }
    ai_data_use_revisions {
      uuid id PK
      uuid version_id FK
      uuid table_id FK
      string schema_fingerprint
    }
    ai_release_manifests {
      uuid id PK
      uuid version_id FK
      string manifest_hash
      datetime evidence_cutoff
    }
    ai_deployments {
      uuid id PK
      uuid system_id FK
      uuid active_manifest_id FK
      int activation_generation
    }
    ai_approvals {
      uuid id PK
      uuid manifest_id FK
      string decision
      string evidence_snapshot_hash
    }
    ai_evidence {
      uuid id PK
      uuid deployment_id FK
      string content_hash
      string evidence_class
    }
    ai_control_evaluations {
      uuid id PK
      uuid evidence_id FK
      string control_id
      string status
      string reason_code
    }
    ai_governance_incidents {
      uuid id PK
      uuid evaluation_id FK
      string dedupe_key
      string severity
      string status
    }
